--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,5 @@
 @import '@fortawesome/fontawesome-free/css/all.css';
+@import '../../node_modules/bootstrap/dist/css/bootstrap.min.css';
 
 @tailwind base;
 @tailwind components;
